# sample-rust-lambda

./: .env-gdc  .gitignore  Cargo.toml  README.md  makefile  readme.md
devops-tooling/: docker-compose.localstack.yml
docs/: design.drawio
src/: lib.rs  main.rs
tests/: test_rust_lambda.rs
