[package]
name = "rust_lambda"
version = "0.1.0"
edition = "2021"
authors = ["LocalStack"]
license = "LocalStack"

[[bin]]
name = "lambda"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.10.0"
serde_json = "1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1", features = ["derive"] }
bytes = "1"
base64 = "0.21.7"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"]}
